--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* app css stylesheet */
-
 @font-face{
     font-family: 'Norwester';
     src: url('/fonts/norwester.eot');
@@ -8,9 +6,10 @@
          url('/fonts/norwester.ttf') format('truetype'),
          url('/fonts/norwester.svg#webfont') format('svg');
 }
-
-/* Jumbotron
--------------------------------------------------- */
+.jumbotron {
+    background-color: rgb(36,33,30) !important;
+    color: rgba(200,200,200,1);
+}
 .jumbotron h1 {
     font-size: 80px;
     font-weight: 100;
