--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,8 @@ body {
     font-weight: 100;
     font-family: "Norwester", Georgia, "Times New Roman", Times, serif;
 }
+.jumbotron h3 {
+    font-size: 40px;
+    font-weight: 100;
+    font-family: "Norwester", Georgia, "Times New Roman", Times, serif;
+}
